[package]
name = "monitoor"
version = "0.1.0"
edition = "2021"

[dependencies]
autometrics = { version = "2.0.0", features = ["prometheus-exporter"] }
axum = "0.7.7"
serde ={ version = "1.0.213", features = ["derive"]}
tokio = {version ="1.41.0", features =["full"]}
tower-http = {version = "0.6.1",features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ['env-filter']} 
